--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "less-loader": "^11.1.2",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "2.8.8",
-    "sass": "^1.69.5",
+    "sass": "^1.69.7",
     "sass-loader": "^13.3.1",
     "storybook": "^7.0.18",
     "style-loader": "^3.3.3",
@@ -63,8 +63,15 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
+    "antd": "^5.13.0",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.21.2",
+    "redux-thunk": "^3.1.0",
+    "scss": "^0.2.4"
   }
 }
