--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.13.0",
     "clsx": "^1.2.1",
