--- a/package.json
+++ b/package.json
@@ -68,15 +68,17 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.13.0",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.3",
+    "react-hook-form": "^7.50.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "redux-thunk": "^3.1.0",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "yup": "^1.3.3"
   }
 }
